syntax = "proto3";

option go_package = "translater/protos/translate/translate";

package translate;

service Translater {
    rpc GetTranslateWord(TranslateRequest) returns (TranslateResponse){}
}

message TranslateRequest {
    repeated string word = 1;
    string source_language = 2;
    repeated string target_languages = 3;
}

message TranslateResponse {
    map<string, string> translated_word = 1;
}

